--- a/custom.css
+++ b/custom.css
@@ -1,7 +1,3 @@
-/**
-    TEST WORK IN PROGRESS
-**/
-
 .box-v {
     display: flex;
     flex-direction: column;
@@ -13,63 +9,64 @@
     min-width: 50%;
     margin: 0 auto;
     display: flex;
+    border-left: 3px solid black;
     flex-direction: row;
     justify-content: flex-start;
     flex-wrap: wrap;
-    box-shadow: 0 0 10px;
-    border-radius: 10px;
+    /* box-shadow: 0 0 10px; */
+    /* border-radius: 10px; */
 }
 
 :root {
-	--white: #ffffff;
-	--light: #f0eff3;
-	--black: #000000;
-	--dark-blue: #1f2029;
-	--dark-light: #353746;
-	--red: #da2c4d;
-	--yellow: #f8ab37;
-	--grey: #ecedf3;
+    --white: #ffffff;
+    --light: #f0eff3;
+    --black: #000000;
+    --dark-blue: #1f2029;
+    --dark-light: #353746;
+    --red: #da2c4d;
+    --yellow: #f8ab37;
+    --grey: #ecedf3;
 }
 
 .box-v [type="checkbox"]:checked,
 .box-v [type="checkbox"]:not(:checked),
 .box-v [type="radio"]:checked,
 .box-v [type="radio"]:not(:checked){
-	position: absolute;
-	left: -9999px;
-	width: 0;
-	height: 0;
-	visibility: hidden;
+    position: absolute;
+    left: -9999px;
+    width: 0;
+    height: 0;
+    visibility: hidden;
 }
 
 .checkbox-tools:checked + label,
 .checkbox-tools:not(:checked) + label{
-	position: relative;
-	display: inline-block;
-	padding: 5px;
-    width: auto;
+    position: relative;
+    display: inline-block;
+    padding: .5em .5em .5em 0;
+    font-weight: bold;
+    width: 100%;
     min-width: 110px;
-	font-size: 14px;
-	line-height: 20px;
-	letter-spacing: 1px;
-	margin: 0 auto;
-	margin-left: 5px;
-	margin-right: 5px;
-	text-align: left;
-	overflow: hidden;
-	cursor: pointer;
-	text-transform: uppercase;
-	color: var(--black);
+    font-size: 14px;
+    line-height: 20px;
+    letter-spacing: 1px;
+    border-bottom: 2px solid transparent;
+    margin: 0 auto;
+    margin-left: 5px;
+    margin-right: 5px;
+    text-align: left;
+    overflow: hidden;
+    cursor: pointer;
+    text-transform: uppercase;
+    color: var(--black);
 }
 
-.checkbox-tools:checked + label{
+.checkbox-tools:hover + label:hover{
     border-bottom: 2px solid black;
 }
-
-/**
-    END BLOCK
-**/
-
+.checkbox-tools:checked + label{
+    border-bottom: 2px dotted black;
+}
 
 /**** MOSAIC CONTENT ****/
 #aliceblogs-filter-box {
@@ -80,7 +77,7 @@
 }
 
 .aliceblogs-filter-cell {
-    border: 2px solid black;
+    border: 2px solid var(--black);
     padding: 1em;
 }
 
@@ -96,9 +93,28 @@
     margin: 0 1.5em;
     align-items: center;
 }
+
+.aliceblogs-nocard {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+}
+
 .hvrbox > img.hvrbox-layer_bottom {
     max-width: 300px!important;
     height: auto!important;
+}
+
+.aliceblogs-view-options {
+    display: flex; 
+    justify-content: space-between; 
+    width: 50px;
+    color: var(--black);
+}
+
+.aliceblogs-view-options > div:hover {
+    cursor: pointer;
+    color: #666
 }
 
 /***** HOVER BOX FROM : http://css-workshop.com/hover-box-text-over-images-on-hover-and-more/ *****/
