--- a/custom.css
+++ b/custom.css
@@ -7,10 +7,18 @@ html, body {
     font-family: alice!important;
 }
 
+body #login h1 a {
+    background-image: url('images/ALICE-logo.png');
+    background-size: 150px;
+    width: 100%;
+    height: 100px;
+}
+
 .box-v {
     display: flex;
     flex-direction: column;
-    padding-right: 10px;
+    padding-right: 2em;
+    max-height: 150px;
 }
 
 .box-h {
@@ -19,7 +27,26 @@ html, body {
     display: flex;
     flex-direction: row;
     justify-content: flex-start;
-    flex-wrap: wrap;
+}
+
+@media screen and (max-width: 800px) {
+    .box-h {
+        flex-wrap: wrap;
+        flex-direction: column;
+        width: 100%;
+    }
+
+    .box-v {
+        max-height: initial;
+        padding-right: 0;
+        margin-bottom: 1em;
+    }
+}
+
+.aliceblogs-filter-title {
+    color: #666;
+    text-transform: uppercase;
+    font-size: 1.2em;
 }
 
 :root {
@@ -49,13 +76,13 @@ html, body {
 .checkbox-tools:not(:checked) + label{
     position: relative;
     display: inline-block;
-    padding: .5em .5em .5em 0;
-    width: 100%;
+    padding: 0 .5em .5em 0;
+    /*width: 100%;*/
     min-width: 60px;
     font-size: 14px;
     line-height: 20px;
     letter-spacing: 1px;
-    margin: 0 auto;
+    /*margin: 0 auto;*/
     margin-right: 5px;
     text-align: left;
     overflow: hidden;
@@ -158,13 +185,20 @@ html, body {
     padding: 1em;
 }
 
+#aliceblogs-filter-students {
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    max-height: 100%;
+}
+
 #aliceblogs-carddeck {
   text-align: left;
   column-count: 4;
   column-gap: 8px; }
   @media screen and (max-width: 1200px) {
     #aliceblogs-carddeck {
-      column-count: 2; } }
+      column-count: 3; } }
   @media screen and (max-width: 800px) {
     #aliceblogs-carddeck {
       column-count: 1; } }
@@ -193,7 +227,16 @@ html, body {
     visibility: hidden;
     opacity: 0;
     transition: visibility 0s, opacity 0.5s linear;
-
+}
+@media screen and (max-width: 800px){
+    .aliceblogs-card-text {
+        visibility: visible;
+        opacity: 1;
+    }
+    .aliceblogs-card:hover .aliceblogs-card-text{
+        visibility: initial!important;
+        opacity: initial!important;
+    }
 }
 
 .aliceblogs-card:hover .aliceblogs-card-text{
