--- a/custom.css
+++ b/custom.css
@@ -345,6 +345,14 @@ body #login h1 a {
     font-size: 16px;
 }
 
+#aliceblogs-page-home {
+    display: flex;
+}
+
+#aliceblogs-page-home a {
+    margin-right: 1em;
+}
+
 /***** LOADER *****/
 
 #container-loader {
