--- a/custom.css
+++ b/custom.css
@@ -159,6 +159,7 @@ body #login h1 a {
 
 #aliceblogs-newuser-role {
     padding: 1em;
+    text-transform: uppercase;
 }
 
 /* Divi - Stick footer to bottom */
@@ -227,9 +228,16 @@ body #login h1 a {
 }
 
 .aliceblogs-filter-checkall {
-    font-style: italic;
+    font-size:1em;
+    font-style: initial;
     cursor: pointer;
     color: var(--gray);
+}
+#aliceblogs-filter-students .aliceblogs-filter-checkall {
+    font-size: 1em;
+}
+.clicked {
+    font-style:italic !important;
 }
 
 #aliceblogs-carddeck {
