--- a/custom.css
+++ b/custom.css
@@ -268,14 +268,15 @@ body #login h1 a {
 
 
 .aliceblogs-card {
+    flex-grow: 1 0 21%; 
     display: flex;
     justify-content: center;
-    padding: 0 .8em;
     flex-direction: column;
     height: 240px;
     max-width: 400px;
     margin-top: 1em;
     margin-bottom: 1em;
+    margin-right: .9em;
 }
 
 .aliceblogs-card-img {
