--- a/custom.css
+++ b/custom.css
@@ -5,6 +5,7 @@
 
 html, body {
     font-family: alice!important;
+    overflow-x: hidden;
 }
 
 body #login h1 a {
@@ -29,6 +30,9 @@ body #login h1 a {
     flex-direction: row;
     flex-wrap: wrap;
     justify-content: flex-start;
+}
+#aliceblogs-filter-students {
+    margin-bottom: 1em;
 }
 
 @media screen and (max-width: 800px) {
@@ -127,6 +131,7 @@ body #login h1 a {
     font-size: 1.2em;
     border: none;
     border-bottom: 1px solid var(--gray);
+    margin-top: 1em;
 }
 
 #aliceblogs-searchbar:focus {
@@ -282,6 +287,8 @@ body #login h1 a {
 .aliceblogs-card-img {
     display: block;
     height: 200px;
+    width: auto;
+    object-fit: scale-down;
 }
 
 .aliceblogs-card-text {
